bk_ida/gccida/c1/extract_split_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2250:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2255:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2256:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2257:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2258:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2259:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2261:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2262:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2272:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)op0[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2289:12: error: expected identifier or '('
 struct op = op0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2316:31: error: invalid suffix 'orce' on integer constant
v18 = operand_sub*(short *)0xforce( op0, v12, v17); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2316:7: error: use of undeclared identifier 'operand_sub'
v18 = operand_sub*(short *)0xforce( op0, v12, v17); 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2319:55: error: invalid suffix 'xmode' on integer constant
fixed_bit_field = extract_fixed_bit_field( *(short *)0xmode, v18, ( v33 * v12) >> 3, v15, v13, 0LL, 1); 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2325:18: error: invalid suffix 'xmode' on integer constant
v22 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2332:44: error: invalid suffix 'xmode' on integer constant
fixed_bit_field = expand_binop( *(short *)0xmode, optab_table[19], fixed_bit_field, v11, 0LL, 1, OPTAB_LIB_WIDEN); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2345:18: error: invalid suffix 'xmode' on integer constant
v25 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/expmed.c:2348:18: error: invalid suffix 'xmode' on integer constant
v28 = *(short *)0xmode; 
                 ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_split_bit_field/src/obj/expmed.o] Error 1
